# nuvo-serial

./: .gitignore  README.md  pyproject.toml  setup.py
nuvo_serial/: __init__.py  async_connection.py  configuration.py  connection.py  const.py  exceptions.py  grand_concerto_essentia_g.py  message.py  nuvo_typing.py
src/nuvo_serial/: __init__.py  configuration.py  connection.py  const.py  grand_concerto_essentia_g.py  message.py  nuvo_typing.py
tests/: command_response.py  conftest.py  const.py  helper.py
tests/grand_concerto_essentia_g/: conftest.py  test_connection.py  test_source_configuration.py  test_source_display_line.py  test_source_display_track.py  test_state_tracking.py  test_system.py  test_zone_button.py  test_zone_configuration.py  test_zone_eq.py  test_zone_status.py  test_zone_volume_configuration.py
