[project]
name = "nuvo-serial"
version = "0.6.3"
description = "Python API implementing the Nuvo Grand Concerto/Essentia G multi-zone audio amplifier serial control protocol"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [
  { name = "sprocket-9", email = "sprocketnumber9@gmail.com" },
]
dependencies = [
  "serialx>=1.7.0",
  "icontract>=2.7.3,<3",
  "typeguard>=4.5,<5",
]

[project.urls]
Homepage = "https://github.com/sprocket-9/nuvo-serial"
Repository = "https://github.com/sprocket-9/nuvo-serial"

[dependency-groups]
dev = [
  "mypy>=0.812",
  "mypy-extensions>=0.4.3",
  "pytest>=6.2.2",
  "pytest-asyncio>=0.5",
  "ipython>=7.21.0",
  "ipdb>=0.13.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuvo_serial"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
